@@ -1,5 +1,11 @@
 2010-08-23  Tom Tromey  <tromey@redhat.com>
 
+	PR python/10676:
+	* gdb.python/py-type.exp (test_fields): Add tests for type
+	equality.
+
+2010-08-23  Tom Tromey  <tromey@redhat.com>
+
 	PR python/11915:
 	* gdb.python/py-type.exp (test_fields): Add tests for array.
 
